Whitespace slow rendering bug fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,8 +2,10 @@
 
 html,body {
   width: 100%;
-  height: 100vh;
-  overflow-y: hidden;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 html * {
